# destor

./: .gitignore  CMakeLists.txt  README.md  configure.ac  rebuild
include/: destor.h  rewrite_phase.h
include/chunking/: chunking.h
include/index/: index.h
include/recipe/: recipestore.h
include/storage/: containerstore.h
src/: chunk_phase.c  cma.c  config.c  dedup_phase.c  destor.c  do_backup.c  do_delete.c  do_restore.c  filter_phase.c  har_rewrite.c  hash_phase.c  optimal_restore.c  read_phase.c  restore_aware.c  rewrite_phase.c  trace_phase.c
src/chunking/: ae_chunking.c  fastcdc_chunking.c  rabin_chunking.c
src/fsl/: libhashfile.c  read_fsl_trace.c
src/index/: fingerprint_cache.c  index.c  kvstore.c  kvstore_htable.c  sampling_method.c  similarity_detection.c
src/recipe/: recipestore.c
src/storage/: containerstore.c
src/utils/: bloom_filter.c  lru_cache.c  queue.c  sds.c  serial.c  sync_queue.c
